Updates for target tracking autoscaling

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+step-scaling/**/index.zip
+step-scaling/**/metrics.txt
+targettracking-scaling/**/index.zip
+targettracking-scaling/**/metrics.txt
+
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
