--- a/step-scaling/step-scaling.yaml
+++ b/step-scaling/step-scaling.yaml
@@ -293,6 +293,8 @@ Resources:
       ComparisonOperator: LessThanOrEqualToThreshold
       EvaluationPeriods: 2
       Threshold: 0
+      AlarmActions:
+        - !Ref KDAAutoScalingPolicyIn
       Metrics:
       - Expression: ir/60
         Id: ad1
